[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timem-ai"
version = "1.0.0"
description = "TiMem: Temporal-Hierarchical Memory Consolidation for Long-Horizon Conversational Agents"
readme = "README.md"
license = {text = "SSPL-1.0"}
requires-python = ">=3.9"
authors = [
    {name = "TiMem Team", email = "team@timem.ai"},
]
keywords = [
    "memory",
    "ai",
    "llm",
    "conversation",
    "temporal",
    "hierarchical",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "huggingface-hub>=0.33.0",
    "tiktoken>=0.9.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.6.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-prebuilt>=0.6.0",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.4.0",
    "openai>=1.100.0",
    "anthropic>=0.69.0",
    "zhipuai>=2.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "gradio>=4.40.0",
    "gradio-client>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "SQLAlchemy>=2.0.0",
    "qdrant-client>=1.15.0",
    "aiohttp>=3.10.0",
    "aiofiles>=23.0.0",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.20.0",
    "aiomysql>=0.2.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
    "scikit-learn>=1.5.0",
    "nltk>=3.9.0",
    "jieba>=0.42.0",
    "regex>=2024.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "pydantic-core>=2.33.0",
    "python-dotenv>=1.1.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
    "httpcore>=1.0.0",
    "requests>=2.32.0",
    "urllib3>=2.5.0",
    "click>=8.2.0",
    "typer>=0.17.0",
    "rich>=14.0.0",
    "tqdm>=4.67.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.20",
    "colorama>=0.4.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "APScheduler>=3.11.0",
    "structlog>=25.0.0",
    "rouge>=1.0.0",
    "orjson>=3.10.0",
    "ormsgpack>=1.10.0",
    "protobuf>=6.0.0",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "win32-setctime>=1.2.0",
]
local = [
    "torch>=2.0.0",
    "transformers>=4.50.0",
    "sentence-transformers>=5.0.0",
    "accelerate>=1.10.0",
    "safetensors>=0.4.0",
]

[project.urls]
Homepage = "https://timem.ai"
Documentation = "https://github.com/TiMEM-AI/timem-ai/tree/main/docs"
Repository = "https://github.com/TiMEM-AI/timem-ai"
Issues = "https://github.com/TiMEM-AI/timem-ai/issues"

[project.scripts]
timem = "tools.cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["timem*", "storage*", "services*", "llm*", "migration*", "tools*"]
exclude = ["tests*", "experiments*", "cloud-service*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.sql", "*.conf", "*.md"]
